--- a/docs/company/g42.md
+++ b/docs/company/g42.md
@@ -46,7 +46,9 @@
 | **2024 Feb** | Disinvestimento da aziende cinesi (ByteDance, JD.com) |
 | **2024 Apr** | Microsoft investe $1.5B, Brad Smith entra nel board |
 | **2024** | Co-fonda MGX con Mubadala |
-| **2025** | Partner in Stargate UAE con OpenAI/Oracle/SoftBank |
+| **2025 May** | Partner in Stargate UAE con OpenAI/Oracle/SoftBank/Cisco |
+| **2025 May** | Trump firma accordo per campus AI in UAE (il piu' grande fuori USA) |
+| **2025 Nov** | Espansione datacenter 200MW con Microsoft/Khazna |
 
 ---
 
@@ -154,4 +156,4 @@ G42 è al centro del triangolo USA-Cina-Golfo:
 
 ---
 
-*Ultimo aggiornamento: Dicembre 2025*
+*Ultimo aggiornamento: Gennaio 2026*
